--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,13 +7,15 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="dist/basicLightbox.min.css">
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
-
+  <script src="dist/basicLightbox.min.js"></script>
     <script src="js/01-gallery.js" type="module"></script>
+   
   </body>
 </html>
